# cann-yolo26-atlas

./: .gitignore  README.md
CANN-CPP-DETECTION/: CMakeLists.txt  main.cpp
CANN-CPP-TRACK/: main.cpp
